--- a/templates/dhcpd.pool.erb
+++ b/templates/dhcpd.pool.erb
@@ -2,12 +2,14 @@
 # <%= name network mask %>
 #################################
 subnet <%= network %> netmask <%= mask %> {
+<% if has_variable?("range") and range != :undef -%>
   pool
   {
 <% range.each do |r| -%>
     range <%= r %>;
 <% end -%>
-  }
+}
+<% end -%>
 
   option subnet-mask <%= mask %>;
   option routers <%= gateway %>;
