dhcp::pool: allow options parameter

--- a/templates/dhcpd.pool.erb
+++ b/templates/dhcpd.pool.erb
@@ -13,5 +13,12 @@ subnet <%= network %> netmask <%= mask %> {
 
   option subnet-mask <%= mask %>;
   option routers <%= gateway %>;
+
+  <% if has_variable?("options") -%>
+    # custom options
+<% options.each do |opt| -%>
+    <%= opt %>;
+<% end -%>
+<% end -%>
 }
 
