--- a/templates/dhcpd.conf.erb
+++ b/templates/dhcpd.conf.erb
@@ -41,6 +41,7 @@ filename "<%= pxefilename %>";
 
 log-facility <%= logfacility %>;
 
+include "<%= dhcp_dir %>/dhcpd.subnets";
 include "<%= dhcp_dir %>/dhcpd.pools";
 include "<%= dhcp_dir %>/dhcpd.hosts";
 
